file(GLOB_RECURSE srcs CONFIGURE_DEPENDS src/*.cpp include/*.h)
add_library(Http STATIC ${srcs})
target_include_directories(Http PUBLIC include)
find_package(glog REQUIRED)
target_link_libraries(Http PUBLIC glog::glog)
target_link_libraries(Http PUBLIC Log)
target_link_libraries(Http PUBLIC Pool)
target_link_libraries(Http PUBLIC Buffer)
# target_link_libraries(Http PUBLIC Log)
# include_directories(/usr/include/mysql)
# target_link_libraries(Pool PUBLIC mysqlclient)
