file(GLOB_RECURSE srcs CONFIGURE_DEPENDS src/*.cpp include/*.h)
# 可执行文件
# add_executable(Server  ${srcs})
# target_include_directories(Server PUBLIC include)
# target_link_libraries(Server PUBLIC Pool)
# file(GLOB_RECURSE srcs CONFIGURE_DEPENDS src/*.cpp include/*.h)
add_library(Server STATIC ${srcs})
target_include_directories(Server PUBLIC include)
find_package(glog REQUIRED)
target_link_libraries(Server PUBLIC glog::glog)
target_link_libraries(Server PUBLIC Log)
target_link_libraries(Server PUBLIC Pool)
target_link_libraries(Server PUBLIC Buffer)
target_link_libraries(Server PUBLIC Timer)
target_link_libraries(Server PUBLIC Http)
target_link_libraries(Server PUBLIC SkipList)